--- a/mlp_week03.ipynb
+++ b/mlp_week03.ipynb
@@ -357,7 +357,7 @@
    "source": [
     "### 🚩 Exercise 5 (CORE)\n",
     "\n",
-    "Since we simulated the data, we know the true number of clusters. However, in practice this number is rarely known. Find the K-means solution with different choices of $K$ and plot the within-cluster variation as a function of $K$. Comment on the results."
+    "Since we simulated the data, we know the true number of clusters. However, in practice this number is rarely known. Find the K-means solution with different choices of $K$ and plot the within-cluster variation as a function of $K$. What value(s) of $K$ seem appropriate based on this plot?"
    ]
   },
   {
@@ -382,6 +382,87 @@
    "metadata": {},
    "source": [
     "### 🚩 Exercise 6 (CORE)\n",
+    "\n",
+    "Now let's use the silhouette analysis to choose the number of clusters. In the follwing code cells, we use [`silhouette_samples`](https://scikit-learn.org/stable/modules/generated/sklearn.metrics.silhouette_samples.html) to compute the silhouette coefficient for each data point, and [`silhouette_score`](https://scikit-learn.org/stable/modules/generated/sklearn.metrics.silhouette_score.html) which computes the mean of the silhouette coefficients across all data points.\n",
+    "\n",
+    "a) How many clusters would you choose based only on maximizing the silhouette score?\n",
+    "\n",
+    "b) Considering also the violin plots, which visualize the distribution of the silhouette coefficient across data points within each cluster, would you still choose the same number of clusters or pick a different number? Why?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import silhouette_samples, silhouette_score\n",
+    "\n",
+    "# Define the range of possible number ofclusters\n",
+    "K = np.array([2, 3, 4, 5, 6, 7, 8, 9, 10])\n",
+    "\n",
+    "# First plot the silhouette coeffcient for different choices of K\n",
+    "silhouette_coeffs = np.zeros(K.shape)\n",
+    "for i in range(K.shape[0]):\n",
+    "    #Define kmeans object, fit, and predict labels\n",
+    "    kmeans_K = KMeans(n_clusters = K[i], n_init = 20, random_state=0).fit(X)\n",
+    "    labs = kmeans_K.predict(X)\n",
+    "    # Compute silhouette coefficient\n",
+    "    silhouette_coeffs[i] = silhouette_score(X, labs)\n",
+    "\n",
+    "# Plot the silhouette coefficients\n",
+    "fig, ax = plt.subplots(1,1,figsize=(5,4))\n",
+    "sns.lineplot(x=K, y=silhouette_coeffs, linestyle='dashed', ax=ax)\n",
+    "sns.scatterplot(x=K, y=silhouette_coeffs, ax=ax)\n",
+    "plt.xlabel('K')\n",
+    "plt.ylabel('Silhouette Coefficient')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot the silhouette samples for different choices of K\n",
+    "\n",
+    "max_i = 4\n",
+    "fig, ax = plt.subplots(2, 5, figsize=(25, 10))  \n",
+    "for i in range(max_i+1):\n",
+    "    kmeans_K = KMeans(n_clusters = K[i], n_init = 20, random_state=0).fit(X)\n",
+    "    labs = kmeans_K.predict(X)\n",
+    "    silhouette_samps = silhouette_samples(X, labs)\n",
+    "\n",
+    "    # Create a violin plot of the silhouette samples\n",
+    "    sns.violinplot(y=silhouette_samps, hue=labs, ax=ax[0,i], palette='Set1')\n",
+    "    ax[0,i].axhline(silhouette_samps.mean(), ls='--',c=\"gray\")\n",
+    "    ax[0,i].set_title(f'Silhouette Samples for K={K[i]}')\n",
+    "    ax[0,i].set_ylabel('Silhouette Coefficient')\n",
+    "    ax[0,i].set_xlabel('')\n",
+    "    ax[0,i].set_ylim([-0.2, 1])\n",
+    "\n",
+    "    # Plot the clustering solution\n",
+    "    sns.scatterplot(x=X[:,0], y=X[:,1], hue=labs, ax=ax[1,i], palette='Set1')\n",
+    "    sns.scatterplot(x=kmeans_K.cluster_centers_[:,0], y=kmeans_K.cluster_centers_[:,1], \n",
+    "                    c='black', s=50, marker='X', ax=ax[1,i])\n",
+    "    ax[1,i].set_title(f'Clustering Solution for K={K[i]}')\n",
+    "    ax[1,i].set_ylabel('X2')\n",
+    "    ax[1,i].set_xlabel('X1')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "_Type your answer here_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 🚩 Exercise 7 (CORE)\n",
     "\n",
     "Now standardize the data and re-run the K-means algorithm. Qualitatively, how has standardising the data impacted performance? Can you argue why you observe what you see?"
    ]
@@ -423,7 +504,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 🚩 Exercise 7 (CORE)\n",
+    "### 🚩 Exercise 8 (CORE)\n",
     "\n",
     "a) For the following code cell, what is dissimarlity and linkage is used in hierarchical clustering?"
    ]
@@ -491,7 +572,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 🚩 Exercise 8 (CORE)\n",
+    "### 🚩 Exercise 9 (CORE)\n",
     "\n",
     "Now try changing the linkage to single and average. Does this affect on the results?"
    ]
@@ -674,7 +755,7 @@
     "id": "13qbb2jqbvhT"
    },
    "source": [
-    "### 🚩 Exercise 9 (EXTRA)\n",
+    "### 🚩 Exercise 10 (EXTRA)\n",
     "\n",
     "Perform a PCA of $\\mathbf X$ to visualize the data. Plot the first few principal component scores and color by cancer type. Do cell lines within the same cancer types seems to have similar scores? Make a scree plot of the proportion of variance explained. How many components does this suggest?"
    ]
@@ -712,7 +793,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 🚩 Exercise 10 (CORE)\n",
+    "### 🚩 Exercise 11 (CORE)\n",
     "\n",
     "a) Plot the dendrogram with complete, single, and average linkage. Does the choice of linkage affect the results? Which linkage would you choose?"
    ]
@@ -780,7 +861,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 🚩 Exercise 11 (CORE)\n",
+    "### 🚩 Exercise 12 (CORE)\n",
     "\n",
     "Perform K-means clustering with the same number of clusters that you selected for hierarchical clustering. Are the results similar?"
    ]
@@ -805,7 +886,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 🚩 Exercise 12 (EXTRA)\n",
+    "### 🚩 Exercise 13 (EXTRA)\n",
     "\n",
     "Plot the two clustering solutions along with a plot of the data colored by the cancer types in the space spanned by the first two principal components."
    ]
