Added a requirements document

--- a/mlp_week03.ipynb
+++ b/mlp_week03.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "# Week 3: Clustering\n",
     "\n",
-    "**Student Name 1, Student Name 2**\n",
+    "**Isaac Y, Natalia M, Brandon C**\n",
     "\n",
     "In this workshop, we will work through a set of problems on clustering, another cannonical form of unsupervised learning. Clustering is an important tool that is used to discover homogeneous groups of data points within a heterogeneous population. It can be the main goal in some problems, while in others it may be used in EDA to understand the main types of behavior in the data or in feature engineering.   \n",
     "\n",
